# Fructosita-Chess-Engine

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: run_fastchess_regression.sh  run_match_smoke.sh
src/: bitboard.rs  board.rs  book.rs  commands.rs  eval.rs  magic.rs  magic_constants.rs  main.rs  movegen.rs  moves.rs  perft.rs  polyglot_random.rs  search.rs  see.rs  time_management.rs  tt.rs  types.rs  uci.rs  zobrist.rs
src/epd/: mod.rs  san.rs
testdata/epd/: endgames.epd  strategic.epd  tactics.epd
