[package]
name = "fructosita"
version = "1.0.0"
edition = "2024"
version = "1.2.0"
edition = "2021"
15dd82a (Add multithreaded search improvements)
authors = ["Antonio Espinosa"]
description = "Fructosita - motor de ajedrez UCI original, desarrollado desde cero en Rust."
license = "GPL-3.0-or-later"
repository = "https://github.com/TU_USUARIO/fructosita"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "fructosita"
path = "src/main.rs"
